--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/android-chrome-512x512.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/android-chrome-512x512.png">
     <link rel="manifest" href="favicon/site.webmanifest">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Le bon gout</title>
+    <title>Restaurant LGC - la bonne cuisine</title>
 </head>
 <body>
     <header>
@@ -71,7 +71,7 @@
                         </div>
                         <div class="commander">
                             <p>Offrez vous un menu 100% fait maison!</p>
-                            <button class="btn-command" onclick="redirectionNotreCarte()">Commander</button>
+                            <button type="button" class="btn-command" onclick="redirectionNotreCarte()" aria-label="commader">Commander</button>
                         </div>
                     </div>
                     <div class="item">
