--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/menu.css">
     <script src="https://kit.fontawesome.com/6009bb56e6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fontawesome.com/icons/star?f=classic&s=solid">
-    <title>Le bon gout</title>
+    <title>Restaurant LGC</title>
 </head>
 <body>
     <header>
