Add alt attributes to images and specify button types for accessibility improvements

--- a/boisson.html
+++ b/boisson.html
@@ -120,7 +120,7 @@
                     <div id="popupAjoutPanier" class="hidden">
                         <h4>Le Bon Gout</h4>
                         <p id="popup-content"></p>
-                        <img id="popup-image" src="">
+                        <img id="popup-image" src="" alt="">
                         <span class="close"><ion-icon name="close-outline" alt="Image du produit"></ion-icon></span>
                         <button>Ajouter au panier</button> 
                     </div>
