--- a/bonPlans.html
+++ b/bonPlans.html
@@ -120,9 +120,9 @@
                     <div id="popupAjoutPanier" class="hidden">
                         <h4>Le Bon Gout</h4>
                         <p id="popup-content"></p>
-                        <img id="popup-image" src="">
+                        <img id="popup-image" src="" alt="">
                         <span class="close"><ion-icon name="close-outline" alt="Image du produit"></ion-icon></span>
-                        <button>Ajouter au panier</button> 
+                        <button type="button">Ajouter au panier</button> 
                     </div>
                     <div class="section-menu-burger">
                     <h2>Restaurant LGC</h2>
