--- a/burger.html
+++ b/burger.html
@@ -33,7 +33,7 @@
                     <li><a href="./contact.html" class="nav-link">Contact</a></li>
                     <li class="last-separateur"></li>
                 </ul>
-                <button class="btn-command">Commander</button>
+                <button type="button" class="btn-command">Commander</button>
             </nav>
             <div class="icon-cart">
                 <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
@@ -133,7 +133,7 @@
                     <div id="popupAjoutPanier" class="hidden">
                         <h4>Le Bon Gout</h4>
                         <p id="popup-content"></p>
-                        <img id="popup-image" src="">
+                        <img id="popup-image" src="" alt="">
                         <span class="close"><ion-icon name="close-outline" alt="Image du produit"></ion-icon></span>
                         <button id="ajouter-au-panier">Ajouter au panier</button> 
                     </div>
