--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
             <h2>Restaurant LGC</h2>
             <div class="adress">
                 <figure>
-                    <a href="https://www.facebook.com/romarissamba" target="_blank">
+                    <a href="https://www.facebook.com/romarissamba" target="blank">
                         <img src="./asset/adresse.png" alt="contact par facebook">
                     </a>
                     <p>3 Rue Gaston Lauriau, 93100 Montreuil<br>01 41 50 41 05<br></p>
@@ -62,22 +62,22 @@
                 <p>Suivez nous sur nos reseaux!</p>
                 <div class="icone-reseaux">
                     <figure>
-                        <a href="https://www.facebook.com/romarissamba" target="_blank">
+                        <a href="https://www.facebook.com/romarissamba" target="blank">
                             <img src="./asset/facebook.png" alt="contact par facebook">
                         </a>
                     </figure>
                     <figure>
-                        <a href="https://www.facebook.com/romarissamba" target="_blank">
+                        <a href="https://www.facebook.com/romarissamba" target="blank">
                             <img src="./asset/instagram.png" alt="contact par instagram">
                         </a>
                     </figure>
                     <figure>
-                        <a href="https://www.facebook.com/romarissamba" target="_blank">
+                        <a href="https://www.facebook.com/romarissamba" target="blank">
                             <img src="./asset/twitter.png" alt="contact par X">
                         </a>
                     </figure>
                     <figure>
-                        <a href="https://www.facebook.com/romarissamba" target="_blank">
+                        <a href="https://www.facebook.com/romarissamba" target="blank">
                             <img src="./asset/linkedin.png" alt="contact Linkedin">
                         </a>
                     </figure>
