--- a/menu.html
+++ b/menu.html
@@ -35,7 +35,7 @@
                     <li><a href="./contact.html" class="nav-link">Contact</a></li>
                     <li class="last-separateur"></li>
                 </ul>
-                <button class="btn-command">Commander</button>
+                <button type="button" class="btn-command">Commander</button>
             </nav>
             <div class="burger-menu">
                 <span class="bar"></span>
@@ -121,17 +121,19 @@
                             <div class="edit">EDITER</div>
                         </div>
                         <div class="star-widget">
-                            <input type="radio" name="rate" id="rate-5" checked="false">
+                            <input type="radio" name="rate" id="rate-5" aria-label="5 étoiles">
                             <label for="rate-5" class="fa-solid fa-star"></label>
-                            <input type="radio" name="rate" id="rate-4">
+                            <input type="radio" name="rate" id="rate-4"  aria-label="4 étoiles">
                             <label for="rate-4" class="fa-solid fa-star"></label>
-                            <input type="radio" name="rate" id="rate-3">
+                            <input type="radio" name="rate" id="rate-3"  aria-label="3 étoiles">
                             <label for="rate-3" class="fa-solid fa-star"></label>
-                            <input type="radio" name="rate" id="rate-2">
+                            <input type="radio" name="rate" id="rate-2"  aria-label="2 étoiles">
                             <label for="rate-2" class="fa-solid fa-star"></label>
-                            <input type="radio" name="rate" id="rate-1">
+                            <input type="radio" name="rate" id="rate-1"  aria-label="1 étoiles">
                             <label for="rate-1" class="fa-solid fa-star"></label>
+                           
                             <form action="#">
+                                
                                 <header></header>
                                 <div class="textarea">
                                     <textarea cols="30" placeholder="Partagez votre expérience."></textarea>
