--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
         <figure>
            
             <figcaption>
-                <p>&copy; Restaurant LGC - Tous droits réservés - 2025</p>
+                <p>&copy; Restaurant LGC - Tous droits réservés - 2025 <br>
+                    Conception &amp; développement Militello Giuseppe</p>
             </figcaption>
         </figure>
     </footer>
