--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/android-chrome-512x512.png">
@@ -13,7 +12,7 @@
 </head>
 <body>
     <header>
-            <figure class="logo">
+            <figure>
                 <figcaption>
                     <a href="./index.html"><img src="./asset/logo_lgc.png" alt="La grande classe"></a>
                 </figcaption>
