refactor: restructure project files and update script paths

--- a/galerie.html
+++ b/galerie.html
@@ -77,7 +77,7 @@
         </figure>
     </footer>
     
-    <script src="./galery.js"></script>
-    <script src="./pages.js"></script>
+    <script src="./js/galery.js"></script>
+    <script src="./js/pages.js"></script>
 </body>
 </html>
