--- a/index.html
+++ b/index.html
@@ -132,6 +132,6 @@
             </figcaption>
         </figure>
     </footer>
-    <script src="./app.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 </html>
