--- a/menu.html
+++ b/menu.html
@@ -181,7 +181,7 @@
             </figcaption>
         </figure>
     </footer>
-    <script src="./pages.js"></script>
-    <script src="avis.js"></script>
+    <script src="./js/pages.js"></script>
+    <script src="/js/avis.js"></script>
 </body>
 </html>
