--- a/pizza.html
+++ b/pizza.html
@@ -174,6 +174,6 @@
     <script src="./pages.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script src="./ajoutPanier.js"></script>
+    <script src="./js/ajoutPanier.js"></script>
 </body>
 </html>
