refactor: update script paths and remove unused JavaScript files

--- a/apropos.html
+++ b/apropos.html
@@ -84,7 +84,7 @@
             </figcaption>
         </figure>
     </footer>
-    <script src="./pages.js"></script>
-    <script src="apropos.js"></script>
+    <script src="./js/pages.js"></script>
+    <script src="./js/apropos.js"></script>
 </body>
 </html>
