--- a/contact.html
+++ b/contact.html
@@ -120,6 +120,6 @@
             </figcaption>
         </figure>
     </footer>
-    <script src="./pages.js"></script>
+    <script src="./js/pages.js"></script>
 </body>
 </html>
