--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <li><a href="./contact.html" class="nav-link">Contact</a></li>
                     <li class="last-separateur"></li>
                 </ul>
-                <button class="btn-command" onclick="redirectionNotreCarte()">Commander</button>
+                <button type="button" class="btn-command">Commander</button>
             </nav>
             <div class="burger-menu">
                 <span class="bar"></span>
@@ -58,7 +58,7 @@
                         <!--Element commander-->
                         <div class="commander">
                             <p>Envie d'un burger savoureux à prix Tasty?</p>
-                            <button class="btn-command" onclick="redirectionNotreCarte()">Commander</button>
+                            <a href="reservation.html" id="btn-command" class="btn-command">Commander ici</a>
                         </div>
                     </div>
                     <div class="item">
@@ -70,7 +70,7 @@
                         </div>
                         <div class="commander">
                             <p>Offrez vous un menu 100% fait maison!</p>
-                            <button type="button" class="btn-command" onclick="redirectionNotreCarte()" aria-label="commader">Commander</button>
+                            <button type="button" class="btn-command" aria-label="commader">Commander</button>
                         </div>
                     </div>
                     <div class="item">
@@ -82,7 +82,7 @@
                         </div>
                         <div class="commander">
                             <p>Découvrez notre Margherita Tasty!</p>
-                            <button class="btn-command" onclick="redirectionNotreCarte()">Commander</button>
+                            <a href="reservation.html" class="btn-command">Commander</a>
                         </div>
                     </div>
                 </div>
