--- a/salade.html
+++ b/salade.html
@@ -114,7 +114,7 @@
                     <div id="popupAjoutPanier" class="hidden">
                         <h4>Le Bon Gout</h4>
                         <p id="popup-content"></p>
-                        <img id="popup-image" src="">
+                        <img id="popup-image" src="" alt="">
                         <span class="close"><ion-icon name="close-outline" alt="Image du produit"></ion-icon></span>
                         <button>Ajouter au panier</button> 
                     </div>
@@ -159,9 +159,9 @@
             </figcaption>
         </figure>
     </footer>
-    <script src="./pages.js"></script>
+    <script src="./js/ages.js"></script>
+    <script src="./js/ajoutPanier.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script src="./ajoutPanier.js"></script>
 </body>
 </html>
