--- a/burger.html
+++ b/burger.html
@@ -204,9 +204,9 @@
         </figure>
     </footer>
     <script src="./pages.js"></script>
+    <script src="./js/ajoutPanier.js"></script>
+    <script src="./js/panier.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script src="./ajoutPanier.js"></script>
-    <script src="./panier.js"></script>
 </body>
 </html>
