--- a/dessert.html
+++ b/dessert.html
@@ -153,9 +153,9 @@
             </figcaption>
         </figure>
     </footer>
-    <script src="./pages.js"></script>
+    <script src="./js/pages.js"></script>
+    <script src="./js/ajoutPanier.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script src="./ajoutPanier.js"></script>
 </body>
 </html>
