--- a/sandwich.html
+++ b/sandwich.html
@@ -158,6 +158,6 @@
             </figcaption>
         </figure>
     </footer>
-    <script src="./pages.js"></script>
+    <script src="./js/pages.js"></script>
 </body>
 </html>
