feat: add user promise functionality with user data

--- a/index.html
+++ b/index.html
@@ -133,5 +133,6 @@
         </figure>
     </footer>
     <script src="./js/app.js"></script>
+    <script src="./js/sw.js"></script>
 </body>
 </html>
