--- a/index.html
+++ b/index.html
@@ -141,6 +141,6 @@
             }
     </script>
     <script src="./js/app.js"></script>
-    <script src="./js/sw.js"></script>
+    <script src="./sw.js"></script>
 </body>
 </html>
