--- a/index.html
+++ b/index.html
@@ -132,14 +132,7 @@
             </figcaption>
         </figure>
     </footer>
-    <script>
-        
-            if ("serviceWorker" in navigator) {
-            navigator.serviceWorker.register("/Restaurant-LGC/sw.js")
-                .then(() => console.log("Service Worker enregistré !"))
-                .catch(err => console.error("SW échec :", err));
-            }
-    </script>
+<!--     <script></script> -->
     <script src="./js/app.js"></script>
     <script src="./sw.js"></script>
 </body>
