--- a/reservation.html
+++ b/reservation.html
@@ -98,7 +98,10 @@
     </footer>
     <script src="./js/pages.js"></script>
     <script src="./js/reservation.js"></script>
+    <script src="./js/app.js"></script>
+    <script src="./sw.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    
 </body>
 </html>
