style: remove unused font link and update contact.css path in sw.js; update offline.html to use emoji for offline message

--- a/offline.html
+++ b/offline.html
@@ -7,7 +7,6 @@
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/android-chrome-512x512.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/android-chrome-512x512.png">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=android_wifi_3_bar_off" />
     <link rel="manifest" href="favicon/site.webmanifest">
     <link rel="stylesheet" href="./css/contact.css">
     <title>La grande classe - le restaurant</title>
@@ -49,8 +48,8 @@
         <section class="image-contact"></section>
          <section class="section-contact">
             <h1 class="warining-off-line">
-                <span class="material-symbols-outlined">
-                    android_wifi_3_bar_off
+                <span>
+                    📴
                 </span>
                 Vous êtes hors-ligne : vous pouvez nous contacter!
             </h1>
