style: correct comment in index.html for consistency

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <span class="bar"></span>
             </div>
     </header>
-    <!--Mon main -->
+    <!--main -->
     <main>
         <section>
             <div class="carousel">
