--- a/offline.html
+++ b/offline.html
@@ -79,11 +79,7 @@
     <p>Il semble que vous n’ayez pas de connexion Internet. Pas de panique — certaines fonctionnalités restent disponibles.</p>
 
     <div class="illustration" aria-hidden="true">
-      <svg width="72" height="72" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <rect x="2" y="3" width="20" height="14" rx="2" stroke="currentColor" stroke-opacity="0.3" stroke-width="1.2"/>
-        <path d="M2 19h20v2H2z" fill="currentColor" fill-opacity="0.04"/>
-        <path d="M7 10l3 3 7-7" stroke="white" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/>
-      </svg>
+      <p style="font-size: 80px;">🧑‍💻</p>
     </div>
 
     <p>Vous consultez une version en cache. Les actions nécessitant le serveur ne sont pas disponibles.</p>
