fix: update "Retour à l’accueil" link to point to index.html instead of root

--- a/offline.html
+++ b/offline.html
@@ -87,7 +87,7 @@
     <div class="btns">
       <a class="btn btn--primary" href="#" onclick="location.reload();return false;">Réessayer</a>
       <!--<button class="btn btn--ghost" onclick="openHelp()">Page d’aide</button>-->
-      <a class="btn btn--ghost" href="/">Retour à l’accueil</a>
+      <a class="btn btn--ghost" href="index.html">Retour à l’accueil</a>
     </div>
 
     <footer>
