fix: update help redirection to point to index.html instead of /help

--- a/offline.html
+++ b/offline.html
@@ -98,7 +98,7 @@
   <script>
     function openHelp(){
       if (navigator.onLine) {
-        window.location.href = '/help';
+        window.location.href = 'index.html';
         return;
       }
       caches.match('/offline.html').then(function(response){
